RESOLVED FIXED322388
DOMException should have a stack property, like other errors
https://bugs.webkit.org/show_bug.cgi?id=322388
Summary DOMException should have a stack property, like other errors
Chris Dumez
Reported 2026-08-24 01:44:47 PDT
DOMException should have a stack property, like other errors
Attachments
Chris Dumez
Comment 1 2026-08-24 01:47:00 PDT
EWS
Comment 2 2026-08-25 01:13:10 PDT
Committed 319782@main (045a0c6379ef): <https://commits.webkit.org/319782@main> Reviewed commits have been landed. Closing PR #72293 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-08-25 01:14:13 PDT
Note You need to log in before you can comment on or make changes to this bug.